# sdas

./: .gitignore  README.md  pyproject.toml
sdas/: abstract.py  base.py  ft.py  url_utils.py
tests/: test_ft.py
