[tool.poetry]
name = "sdas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.2"
types-requests = "^2.32.0.20240712"
types-beautifulsoup4 = "^4.12.0.20240511"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
